--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,10 +4,9 @@
   <meta charset="utf-8">
   <title>Frontend</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width", initial-scale=1">
-  
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  
+  <meta name="viewport" content="width=device-width", initial-scale=1">  
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> 
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet"> 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
